--- a/classes/CN_Contact_Registered_Insert_Rest.cls
+++ b/classes/CN_Contact_Registered_Insert_Rest.cls
@@ -16,7 +16,7 @@ global class CN_Contact_Registered_Insert_Rest {
 	private static Set<String> SET_RequireFields = new Set<String> {
 		'firstName',
 		'lastName',
-		'email',
+//		'email',
 		'mgContactID'
 	};
 
@@ -29,6 +29,7 @@ global class CN_Contact_Registered_Insert_Rest {
 		'firstName'     => 'FirstName',
 		'lastName'      => 'LastName',
 		'email'         => 'Email',
+//		'mobile'		=> 'MobilePhone',
 		'mgContactID'   => 'CN_MG_Contact_ID__c',
 		'mgAccountID'   => 'AccountId',
 		'contactOwner'  => 'OwnerId',
